# background-remover-model

./: LICENSE  MANIFEST.in  PYPI_UPLOAD.md  QUICK_START_PYPI.md  README.md  build_and_upload.sh  pyproject.toml  setup.py
backend/app/: __init__.py
