[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "background-remover-api"
version = "1.0.0"
description = "A FastAPI-based API for removing backgrounds from images and videos using backgroundremover"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sureshshanmugasundaram", email = "sureshdeveloperofficial@gmail.com"}
]
keywords = ["background-removal", "image-processing", "video-processing", "fastapi", "backgroundremover"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "backgroundremover>=0.2.9",
    "numpy<2.0.0",
    "Pillow>=8.1.1,<10.0.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sureshdeveloperofficial/background-remover-model"
Documentation = "https://github.com/sureshdeveloperofficial/background-remover-model#readme"
Repository = "https://github.com/sureshdeveloperofficial/background-remover-model"
Issues = "https://github.com/sureshdeveloperofficial/background-remover-model/issues"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
app = ["**/*.py"]

